@@ -78,6 +78,7 @@ STEPTALK_ENVDEFS_DIR = $(STEPTALK_LIBRARY_DIR)/Environments
 ADDITIONAL_INCLUDE_DIRS += -I./Headers
 
 ADDITIONAL_CPPFLAGS += -pipe 
+# ADDITIONAL_OBJCFLAGS = -Wall -Werror
 
 DOCUMENT_NAME = StepTalk
 
